croppingDiv bug fixed

--- a/components/Popups/popup.module.scss
+++ b/components/Popups/popup.module.scss
@@ -220,7 +220,9 @@
   justify-content: center;
   .cropArea {
     background-color: var(--bg-c-1);
-    transition: 0.3s;
+    // transition: 0.3s;
+    // transition-delay: 0.2s;
+    position: relative;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -233,7 +235,9 @@
       cursor: -webkit-grabbing;
       cursor: -moz-grabbing;
     }
+
     .imgToCrop {
+      // transition: 0.3s;
       background-repeat: no-repeat;
       background-size: cover;
       width: 100%;
